SDGF-300: Remove use of GemFireCache